--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="./searchBox/searchBox.css">
     <title>Document</title>
+    <script>
+         $(function(){
+      $("#searchBox").load("./searchBox/searchBox.html"); 
+    });
+    </script>
 </head>
 <body>
     <a href="./searchBox/searchBox.html">search box</a>
+    <div id="searchBox"></div>
 </body>
 </html>
