--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="../frontAwesome/css/all.min.css">
     <link rel="stylesheet" href="./searchBox/searchBox.css">
     <title>Document</title>
     <script>
