--- a/searchBox/searchBox.html
+++ b/searchBox/searchBox.html
@@ -11,10 +11,10 @@
 <body>
     <div class="searchBox">
         <input class="searchBox_input" type="text" placeholder="Search">
-        <i class="fas fa-search"></i>
+        <i class="fas fa-search searchIcon"></i>
     </div>
     <div class="searchBox">
-        <i class="fas fa-search"></i>
+        <i class="fas fa-search searchIcon"></i>
         <input class="searchBox_input" type="text" placeholder="Search">
     </div>
 </body>
